--- a/Movideo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Movideo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -18,41 +18,41 @@
                                     <constraint firstAttribute="height" constant="512" id="gDX-KG-VCl"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lA9-Sc-PNm">
-                                    <size key="itemSize" width="320" height="105"/>
+                                    <size key="itemSize" width="320" height="177"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="mediaCollectionViewCell" id="BNC-RH-03R" customClass="MediaCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="177"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="177"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2z-RU-dhg">
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="95" id="S11-4I-FmD"/>
-                                                        <constraint firstAttribute="width" constant="103" id="rfI-S4-EuT"/>
+                                                        <constraint firstAttribute="width" constant="303" id="6Ud-1b-z7n"/>
+                                                        <constraint firstAttribute="height" constant="170" id="v4x-Rb-dK4"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEH-Bi-EpY">
                                                     <subviews>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="7" preferredMaxLayoutWidth="147" translatesAutoresizingMaskIntoConstraints="NO" id="2ai-jE-6ii">
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ai-jE-6ii">
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="32" id="YeC-56-5CZ"/>
-                                                                <constraint firstAttribute="width" constant="147" id="czP-Jd-abI"/>
+                                                                <constraint firstAttribute="width" constant="268" id="HB4-UT-ma6"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="13"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="0.52000000000000002" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="leading" secondItem="gEH-Bi-EpY" secondAttribute="leading" constant="-5" id="MOA-N5-cCS"/>
-                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="top" secondItem="gEH-Bi-EpY" secondAttribute="top" constant="5" id="pQO-f0-uaO"/>
+                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="leading" secondItem="gEH-Bi-EpY" secondAttribute="leading" constant="6" id="Vb9-3V-ekf"/>
+                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="top" secondItem="gEH-Bi-EpY" secondAttribute="top" type="default" id="cje-yP-7wb"/>
+                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="bottom" secondItem="gEH-Bi-EpY" secondAttribute="bottom" type="default" id="myN-Io-ACW"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -60,12 +60,12 @@
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="15" id="2nw-w2-t6h"/>
-                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="bottom" secondItem="x2z-RU-dhg" secondAttribute="bottom" type="default" id="3Wx-lH-fIG"/>
-                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="132" id="86h-Kc-Qnh"/>
-                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="top" secondItem="BNC-RH-03R" secondAttribute="top" constant="59" id="DQO-gc-GFT"/>
-                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="centerY" secondItem="BNC-RH-03R" secondAttribute="centerY" type="default" id="hNZ-Vi-kq8"/>
-                                            <constraint firstAttribute="trailing" secondItem="gEH-Bi-EpY" secondAttribute="trailing" constant="36" id="iaF-2k-Qqh"/>
+                                            <constraint firstAttribute="trailing" secondItem="gEH-Bi-EpY" secondAttribute="trailing" constant="17" id="8ca-UO-RMf"/>
+                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="12" id="MhC-kl-2FD"/>
+                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="top" secondItem="BNC-RH-03R" secondAttribute="top" constant="6" id="QGE-H0-gtI"/>
+                                            <constraint firstAttribute="bottom" secondItem="gEH-Bi-EpY" secondAttribute="bottom" constant="6" id="ckm-tl-rdf"/>
+                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="top" secondItem="BNC-RH-03R" secondAttribute="top" constant="144" id="g5i-Jz-nES"/>
+                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="7" id="jjS-Us-8Ez"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="mediaImage" destination="x2z-RU-dhg" id="nTe-QJ-3hc"/>
@@ -83,21 +83,24 @@
                                     <segment title="Search"/>
                                 </segments>
                                 <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="touchSegmentedControl:" destination="2" eventType="valueChanged" id="Dqx-dg-bt6"/>
+                                </connections>
                             </segmentedControl>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="movideo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="DBJ-mA-Ta2">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="23" id="UBC-PS-96B"/>
                                     <constraint firstAttribute="width" constant="67" id="Zyy-lQ-o8m"/>
+                                    <constraint firstAttribute="height" constant="21" id="qsh-X8-pkY"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.97254908080000002" green="0.78431379800000001" blue="0.18823531269999999" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstItem="YyA-aO-iEL" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="7sY-Ye-9il"/>
+                            <constraint firstItem="VA1-Vo-ZW5" firstAttribute="top" secondItem="DBJ-mA-Ta2" secondAttribute="top" type="default" id="A6X-0J-6RA"/>
                             <constraint firstItem="YyA-aO-iEL" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="JEL-NH-OBw"/>
                             <constraint firstItem="YyA-aO-iEL" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="cHk-0P-sfB"/>
-                            <constraint firstItem="DBJ-mA-Ta2" firstAttribute="top" secondItem="3" secondAttribute="top" constant="1" id="lRZ-Wr-S7Y"/>
-                            <constraint firstItem="VA1-Vo-ZW5" firstAttribute="top" secondItem="3" secondAttribute="top" constant="3" id="mwI-8u-u7y"/>
+                            <constraint firstItem="DBJ-mA-Ta2" firstAttribute="top" secondItem="3" secondAttribute="top" constant="3" id="ipV-SO-bq8"/>
                             <constraint firstItem="DBJ-mA-Ta2" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="7" id="uDV-i1-tzh"/>
                             <constraint firstItem="VA1-Vo-ZW5" firstAttribute="centerX" secondItem="YyA-aO-iEL" secondAttribute="centerX" type="default" id="z8S-ol-uLp"/>
                         </constraints>
@@ -117,6 +120,7 @@
         <class className="MasterViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
             <relationships>
+                <relationship kind="action" name="touchSegmentedControl:"/>
                 <relationship kind="outlet" name="collectionView" candidateClass="MediaCollectionView"/>
             </relationships>
         </class>
